# FeiRays

./: .gitmodules  CMakeLists.txt  ColoredIndexedTriangleList.cpp  ColoredIndexedTriangleList.h  ColoredTriangleList.cpp  ColoredTriangleList.h  ColoredUnitSphere.cpp  ColoredUnitSphere.h  LICENSE  Material.h  PathTracer.cpp  PathTracer.h  README.md  RNGInitializer.cpp  RNGInitializer.h  RNGState.h  RNGState_simple.h  SRGBConverter.cpp  SRGBConverter.h  TexturedTriangleList.cpp  TexturedTriangleList.h  TexturedUnitSphere.cpp  TexturedUnitSphere.h  Timing.h  UnitSphereCheckerTex.cpp  UnitSphereCheckerTex.h  WavefrontIndexedTriangleList.cpp  WavefrontIndexedTriangleList.h  context.cpp  context.h  dump_srgb.cu  pack_shaders.cpp  rand_state_init.cu  rand_state_init.hpp  rand_state_init_simple.cu  rand_state_init_xorwow.cu  rand_state_init_xorwow.hpp  xor_wow_data.hpp
PyFeiRays/: CMakeLists.txt  PyFeiRays.cpp  Scene.cpp  Scene.h  api.h  api_scene.cpp  api_utils.cpp  dds_reader.hpp  texture_map.cpp  texture_map.h
data/Medieval_building/: Medieval_building.mtl
python/: FeiRays.py  PyFeiRays.pyd  README.md  setup.py  test.py
python/FeiRays/: Native.py  Scene.py  __init__.py  utils.py
shaders/: bindings.h  build.bat  build.sh  closesthit_colored_indexed_triangle_lists.rchit  closesthit_colored_indexed_triangle_lists.spv  closesthit_colored_unit_spheres.rchit  closesthit_colored_unit_spheres.spv  closesthit_sphere_lights.rchit  closesthit_sphere_lights.spv  closesthit_spheres.rchit  closesthit_textured_triangle_lists.rchit  closesthit_textured_triangle_lists.spv  closesthit_textured_unit_spheres.rchit  closesthit_textured_unit_spheres.spv  closesthit_triangles.rchit  closesthit_unit_spheres_checker_tex.rchit  closesthit_unit_spheres_checker_tex.spv  closesthit_wavefront_indexed_triangle_lists.rchit  closesthit_wavefront_indexed_triangle_lists.spv  final.comp  final.spv  intersection_spheres.rint  intersection_unit_spheres.rint  intersection_unit_spheres.spv  light_source_dist.shinc  miss.rmiss  miss.spv  miss_shadow.rmiss  miss_shadow.spv  miss_tex_sky.rmiss  miss_tex_skys.spv  payload.shinc  rand.shinc  rand_simple.shinc  raygen.rgen  raygen.spv  raygen_params.shinc  sunlight.shinc
shaders/common/: bindings.h  frag_srgb.frag  frag_srgb.spv  image.shinc  light_source_dist.shinc  miss.rmiss  miss.spv  miss_tex_sky.rmiss  miss_tex_sky.spv  payload.shinc  rand_init.comp  rand_init.spv  rand_xorwow.shinc  vert_srgb.spv  vert_srgb.vert
shaders/geometry/: closesthit_colored_indexed_triangle_lists.rchit  closesthit_colored_indexed_triangle_lists.spv  closesthit_colored_unit_spheres.rchit  closesthit_colored_unit_spheres.spv  closesthit_sphere_lights.rchit  closesthit_sphere_lights.spv  closesthit_textured_triangle_lists.rchit  closesthit_textured_triangle_lists.spv  closesthit_textured_unit_spheres.rchit  closesthit_textured_unit_spheres.spv  closesthit_unit_spheres_checker_tex.rchit  closesthit_unit_spheres_checker_tex.spv  closesthit_wavefront_indexed_triangle_lists.rchit  closesthit_wavefront_indexed_triangle_lists.spv  intersection_unit_spheres.rint  intersection_unit_spheres.spv
shaders/path_tracer/: final.comp  final.spv  raygen.rgen  raygen.spv  raygen_params.shinc
tests/: lambertian_obj.cpp  lambertian_obj.h  rt_weekend.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test_rng.cpp  texture_map.cpp  texture_map.h  wavefront_obj.cpp  wavefront_obj.h
